[gd_scene load_steps=59 format=2]

[ext_resource path="res://Assets/sprites/adventurer-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Assets/sprites/adventurer_run.png" type="Texture" id=2]
[ext_resource path="res://Assets/sounds/swoosh_3.mp3" type="AudioStream" id=3]
[ext_resource path="res://Scripts/MovementScript.gd" type="Script" id=4]
[ext_resource path="res://Assets/effects/yellow_slash.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 150, 185, 50, 37 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 200, 185, 50, 37 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 250, 185, 50, 37 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 300, 185, 50, 37 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 50, 74, 50, 37 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 100, 74, 50, 37 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 150, 74, 50, 37 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 200, 74, 50, 37 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 250, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 37, 50, 37 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 250, 296, 50, 37 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 300, 296, 50, 37 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 333, 50, 37 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 50, 333, 50, 37 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 100, 333, 50, 37 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 150, 333, 50, 37 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 200, 333, 50, 37 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 250, 333, 50, 37 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 200, 74, 50, 37 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 50, 111, 50, 37 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 100, 111, 50, 37 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 50, 74, 50, 37 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 50, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 100, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 150, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 200, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 250, 0, 50, 37 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 259, 50, 37 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 50, 259, 50, 37 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 100, 259, 50, 37 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 150, 259, 50, 37 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 50, 222, 50, 37 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 100, 222, 50, 37 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 150, 222, 50, 37 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 200, 222, 50, 37 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 250, 222, 50, 37 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 250, 259, 50, 37 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 300, 259, 50, 37 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 296, 50, 37 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 50, 296, 50, 37 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 100, 296, 50, 37 )

[sub_resource type="SpriteFrames" id=55]
animations = [ {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "Idle",
"speed": 4.0
}, {
"frames": [ SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": false,
"name": "Jumping",
"speed": 4.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "Crouched",
"speed": 5.0
}, {
"frames": [ SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ) ],
"loop": false,
"name": "Die",
"speed": 5.0
}, {
"frames": [ SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ) ],
"loop": true,
"name": "Falling",
"speed": 5.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": true,
"name": "Run",
"speed": 6.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": false,
"name": "Attack_1",
"speed": 4.0
}, {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ) ],
"loop": false,
"name": "Attack_2",
"speed": 5.0
}, {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ) ],
"loop": false,
"name": "Attack_3",
"speed": 4.0
} ]

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 564, 0, 188, 188 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 752, 0, 188, 188 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 188, 188, 188, 188 )

[sub_resource type="SpriteFrames" id=78]
animations = [ {
"frames": [ SubResource( 75 ), SubResource( 76 ), SubResource( 77 ) ],
"loop": false,
"name": "Slash",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 7.23214, 8.125 )

[sub_resource type="RectangleShape2D" id=56]
extents = Vector2( 13.375, 16 )

[sub_resource type="RectangleShape2D" id=57]
extents = Vector2( 24.25, 9 )

[sub_resource type="RectangleShape2D" id=66]
extents = Vector2( 6.5, 10.375 )

[node name="Hero" type="KinematicBody2D"]
position = Vector2( 640, 570 )
scale = Vector2( 4, 4 )
collision_layer = 3
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 55 )
animation = "Idle"

[node name="Effects" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 5, -9 )
rotation = -2.01458
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 78 )
animation = "Slash"
speed_scale = 2.0

[node name="Attacks" type="Area2D" parent="." groups=["HeroAttacks"]]

[node name="Attack_1" type="CollisionShape2D" parent="Attacks"]
position = Vector2( 13.125, 2.875 )
scale = Vector2( 1.4, 1.8 )
shape = SubResource( 22 )
disabled = true

[node name="Attack_2" type="CollisionShape2D" parent="Attacks"]
position = Vector2( 10.875, -2.25 )
shape = SubResource( 56 )
disabled = true

[node name="Attack_3" type="CollisionShape2D" parent="Attacks"]
position = Vector2( 0.75, 8 )
shape = SubResource( 57 )
disabled = true

[node name="HurtBox" type="Area2D" parent="." groups=["HeroHurtBox"]]

[node name="IdleColl" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( -0.5, 5.625 )
shape = SubResource( 66 )

[node name="CrouchedColl" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0.5, 7.375 )
shape = SubResource( 66 )

[node name="SFX" type="Area2D" parent="."]

[node name="Swoosh" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 3 )
volume_db = -2.0
pitch_scale = 1.2

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
